# comm-site-planning

./: .travis.yml  Airmass.py  ClimateConops.py  PlotAirmass.py  PlotSolarElev.py  README.md  README.rst  SolarElev.py  climateConops.py  requirements.txt  setup.cfg  setup.py
commsiteplan/: __init__.py  airMass.py  compsolar.py  plots.py
examples/: PlotSolarElev.py  climateConops.py
tests/: test.py  test_all.py
