[metadata]
name = commsiteplan
version = 1.2.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/comm-site-planning
description = utilities for planning comms sites and science outposts
keywords =
  thermodynamics
  R-value
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: End Users/Desktop
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Intended Audience :: Telecommunications Industry
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Atmospheric Science
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  Airmass.py
  ClimateConops.py
  SolarElev.py
install_requires =
  numpy
  astropy
  python-dateutil
  xarray

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
